Offline profile Global variables Switches can set global variables Switches and Doors in mazes

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"grunt-minify-html": "latest",
 		"grunt-replace": "latest",
 		"grunt-zip": "latest",
+        "grunt-profile": "latest",
 		"jsfxr": "latest"
 	}
 }
